--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <button id="testBtn">Test Button</button>
+    <script>
+        /*
+        Завдання:
+        Додайте для кнопки testBtn обробник на подію click.
+        Обробник має виводити на екран повідомлення Hello world.
+        Додайте обробник трьома різними способами.
+        */
+       function showMessage(){
+        alert('Hello world!')
+       }
+       let btn = document.querySelector('#testBtn');
+       btn.onclick = showMessage;
+       
+
+    </script>
+
 </body>
 </html>
