add some changes to index2.html

--- a/index1.html
+++ b/index1.html
@@ -8,12 +8,13 @@
   <body>
     <button id="testBtn">Test Button</button>
     <script>
-      /*
-        Завдання:
-        Додайте для кнопки testBtn обробник на подію click.
-        Обробник має виводити на екран повідомлення Hello world.
-        Додайте обробник трьома різними способами.
-        */
+      // /*
+      //   Завдання:
+      //   Додайте для кнопки testBtn обробник на подію click.
+      //   Обробник має виводити на екран повідомлення Hello world.
+      //   Додайте обробник трьома різними способами.
+      //   */
+
       function showMessage() {
         alert("Hello world!");
       }
