--- a/index4.html
+++ b/index4.html
@@ -17,6 +17,7 @@
         <li>Ананас</li>
         <li>Сливка</li>
     </ul>
+    <button>Sort</button>
 
     <script>
         /*
@@ -24,6 +25,9 @@
         Перепишіть сценарій. Зробіть так, щоб сортування елементів в #list відбувалося під час натискання
         на кнопку (кнопку потрібно додати), а не під час завантаження сторінки.
         */
+        document.querySelector('button').addEventListener('click', function(){
+
+        
         let list = document.querySelector("#list");
 
         let items = document.querySelectorAll("li"); // Отримуємо об'єкт NodeList (це не масив).
@@ -49,6 +53,7 @@
         itemsArray.forEach(item => {
             list.append(item);
         });
+    });
 
 
     </script>
