--- a/index4.html
+++ b/index4.html
@@ -1,62 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 04</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <ul id="list">
-        <li>Яблуко</li>
-        <li>Грушка</li>
-        <li>Апельсин</li>
-        <li>Мандарин</li>
-        <li>Ананас</li>
-        <li>Сливка</li>
+      <li>Яблуко</li>
+      <li>Грушка</li>
+      <li>Апельсин</li>
+      <li>Мандарин</li>
+      <li>Ананас</li>
+      <li>Сливка</li>
     </ul>
     <button>Sort</button>
 
     <script>
-        /*
+      /*
         Завдання:
         Перепишіть сценарій. Зробіть так, щоб сортування елементів в #list відбувалося під час натискання
         на кнопку (кнопку потрібно додати), а не під час завантаження сторінки.
         */
-        document.querySelector('button').addEventListener('click', function(){
-
-        
+      document.querySelector("button").addEventListener("click", function () {
         let list = document.querySelector("#list");
 
         let items = document.querySelectorAll("li"); // Отримуємо об'єкт NodeList (це не масив).
         let itemsArray = Array.from(items); // На основі NodeList створюємо масив.
-        
-         // Виконуємо сортування за допомогою стандартного методу масиву,
-         // оскільки сортуються вузли DOM, потрібно визначити критерії, за якими вузли порівнюватимуть.
-         // Функція, яка зазначена в параметрі методу sort, визначає логіку порівняння двох елементів у масиві. Вона має повертати значення:
-         // якщо a < b, повертати значення менше за 0;
-         // якщо a > b, повертати значення більше за 0;
-         // якщо a == b, повертати 0.
+
+        // Виконуємо сортування за допомогою стандартного методу масиву,
+        // оскільки сортуються вузли DOM, потрібно визначити критерії, за якими вузли порівнюватимуть.
+        // Функція, яка зазначена в параметрі методу sort, визначає логіку порівняння двох елементів у масиві. Вона має повертати значення:
+        // якщо a < b, повертати значення менше за 0;
+        // якщо a > b, повертати значення більше за 0;
+        // якщо a == b, повертати 0.
 
         itemsArray.sort(function (a, b) {
-            if (a.textContent < b.textContent)
-                return -1;
-            if (a.textContent > b.textContent)
-                return 1;
-            return 0;
+          if (a.textContent < b.textContent) return -1;
+          if (a.textContent > b.textContent) return 1;
+          return 0;
         });
 
-         // Додавання елементів в алфавітному порядку.
-         // Оскільки елементи вже є в дереві DOM, то під час додавання елемент видаляється зі своєї попередньої позиції.
-        itemsArray.forEach(item => {
-            list.append(item);
+        // Додавання елементів в алфавітному порядку.
+        // Оскільки елементи вже є в дереві DOM, то під час додавання елемент видаляється зі своєї попередньої позиції.
+        itemsArray.forEach((item) => {
+          list.append(item);
         });
-    });
-
-
+      });
     </script>
-</body>
-
+  </body>
 </html>
